# docling-rag

./: .gitignore  CLAUDE.md  README.md  config.yaml  pyproject.toml
.claude/skills/docling-rag-manager/: SKILL.md
cli/: __init__.py  commands.py  config_loader.py
core/: agent.py  chunker.py  embedder.py  parser.py  search.py  storage.py
docs/: Feature_Specification.md
docs/plans/: 2026-02-14-document-metadata-categorization-design.md  2026-02-14-document-metadata-categorization.md  2026-02-14-mvp-implementation.md
docs/plans/skill-tests/: baseline-scenarios.md
storage/: doc_registry.py  file_storage.py
tests/: test_agent.py  test_agent_integration.py  test_cli.py  test_config.py  test_integration.py  test_search.py
tests/core/: test_chunker.py  test_embedder.py  test_parser.py
tests/storage/: test_doc_registry.py  test_file_storage.py
