[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "docling-rag"
version = "0.1.0"
description = "Semantic search CLI for technical documentation using Docling"
requires-python = ">=3.10,<3.13"
dependencies = [
    "docling>=2.0.0",
    "sentence-transformers>=3.0.0",
    "numpy>=1.26.0",
    "click>=8.1.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
]

[project.scripts]
docling-rag = "cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "storage*", "cli*"]

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as requiring real Docling and model download (deselect with '-m not integration')",
    "slow: marks tests that are slow due to model inference (deselect with '-m not slow')",
]
